# ArduinoBLE

./: CMakeLists.txt  main.cpp
ArduinoCore-Linux/cores/arduino/: ArdStdio.h  Arduino.cpp  HardwareSetup.h  Main.cpp  Serial.h  itoa.cpp  serialib.cpp  serialib.h
ArduinoCore-Linux/libraries/ArduinoBLE/local/: BLELocalDevice.cpp
ArduinoCore-Linux/libraries/ArduinoBLE/utility/: HCIUartTransport.cpp  L2CAPSignaling.cpp
